# tlc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
C#/Console/TheLearningChannelCS.Assignments/: TheLearningChannelCS.Assignments.csproj
C#/Console/TheLearningChannelCS.Common/Interfaces/: IQuestion.cs
C#/Console/TheLearningChannelCS.Handlers/: AssignmentHandler.cs
C++/Console/: CMakeLists.txt
C++/Console/include/exercises/: exercises.h
C++/Console/include/exercises/interfaces/: exercise_interface.h
C++/Console/include/exercises/list/: fifth.h  thirteenth.h
C++/Console/include/services/: image_handler.h  math_handler.h  prompt_handler.h
C++/Console/resources/csv/: Covid19VicosaMG.csv
C++/Console/src/exercises/: exercise.cpp  exercises.cpp  question.cpp
C++/Console/src/exercises/list/: fifth.cpp  tenth.cpp  thirteenth.cpp
C++/GUI/: .gitignore  CMakeLists.txt
C++/GUI/apps/: main.cpp
C++/GUI/lib/: CMakeLists.txt
C++/Unreal/: Unreal.code-workspace  Unreal.uproject
C++/Unreal/Config/: DefaultEngine.ini  DefaultGame.ini
C++/Unreal/Content/: InifinityRotation.umap  TLC.umap
C++/Unreal/Content/Maps/Basics/: Rotation.umap  Slate.umap  UI.umap  UMG.umap
C++/Unreal/Content/Project/Maps/Basics/: Rotation.umap  UI.umap
C++/Unreal/Content/StarterContent/Architecture/: Floor_400x400.uasset
C++/Unreal/Content/UI/HUD/: Font_NatoSans.uasset
C++/Unreal/Content/UI/HUD/Faces/: Font_NotoSans-Bold.uasset  Font_NotoSans-Light.uasset  Font_NotoSans-Regular.uasset
C++/Unreal/Source/Unreal/: InfinitySphere.cpp  InfinitySphere.h  InfinitySphereSelectedAxisVector.h  Types.h  Unreal.Build.cs
C++/Unreal/Source/Unreal/Actors/InfinitySphere/: InfinitySphere.cpp  InfinitySphere.h
C++/Unreal/Source/Unreal/Actors/PlayerHUD/: PlayerHUD.cpp  PlayerHUD.h
C++/Unreal/Source/Unreal/Classes/: InfinitySphereDimensions.h  InifinitySphereSelectedAxis.h  InternalFont.h  PlayerStatus.h
C++/Unreal/Source/Unreal/Private/Items/: InfinitySphere.cpp
C++/Unreal/Source/Unreal/Private/Player/: PlayerHUDController.cpp  PlayerSlateHUDController.cpp
C++/Unreal/Source/Unreal/Private/UI/: PlayerHUD.cpp  PlayerHUDWidget.cpp  PlayerSlateHUD.cpp  (+1 more)
CPP/: CMakeLists.txt
CPP/Console/apps/: main.cpp
CPP/Console/include/exercises/: exercise.h  exercises.h  question.h
CPP/Console/include/exercises/interfaces/: exercise_interface.h  question_interface.h
CPP/Console/include/exercises/list/: eighth.h  fifth.h  ninth.h  tenth.h  thirteenth.h
CPP/Console/include/services/: image_handler.h  math_handler.h  prompt_handler.h  random_generator.h  ui_handler.h  vector_handler.h
CPP/Console/src/exercises/: exercise.cpp  exercises.cpp
CPP/Console/src/exercises/list/: eighth.cpp  fifth.cpp  ninth.cpp  tenth.cpp  thirteenth.cpp
CPP/Console/src/services/: image_handler.cpp  math_handler.cpp  prompt_handler.cpp  ui_handler.cpp
CPP/GUI/: CMakeLists.txt
CPP/GUI/apps/: main.cpp
CPP/GUI/lib/: CMakeLists.txt
CPP/apps/: CMakeLists.txt  TLC.vcxproj  TLC.vcxproj.filters
CPP/include/exercises/: exercises.h  question.h
CPP/include/exercises/interfaces/: exercise_interface.h  question_interface.h
CPP/include/exercises/list/: eighth.h  fifth.h  ninth.h  tenth.h  thirteenth.h
CPP/include/services/: image_handler.h  math_handler.h  prompt_handler.h  ui_handler.h  vector_handler.h
CPP/src/: CMakeLists.txt  my_library.vcxproj  my_library.vcxproj.filters
CPP/src/exercises/: question.cpp
CPP/src/exercises/list/: eighth.cpp  tenth.cpp
CPP/src/services/: image_handler.cpp  math_handler.cpp
CS/: TheLearningChannelCS.sln
CS/Console/: TheLearningChannelCS.sln
CS/Console/TheLearningChannelCS.App/: Program.cs  TheLearningChannelCS.App.csproj
CS/Console/TheLearningChannelCS.Assignments/: FifthAssignment.cs  ThirteenthAssignment.cs
CS/Console/TheLearningChannelCS.Handlers/: ExternalFilesHandler.cs  InputHandler.cs
CS/Console/TheLearningChannelCS.Questions/FifthAssignment/: FirstQuestion.cs
CS/Console/TheLearningChannelCS.Questions/NinthAssignment/: FirstQuestion.cs
CS/Console/TheLearningChannelCS.Questions/ThirtenthAssignment/: FirstQuestion.cs
CS/TheLearningChannelCS.App/: Program.cs  TheLearningChannelCS.App.csproj
CS/TheLearningChannelCS.Assignments/: EightAssignment.cs  FifthAssignment.cs  NinthAssignment.cs  Program.cs  TenthAssignment.cs  TheLearningChannelCS.Assignments.csproj
CS/TheLearningChannelCS.Common/Interfaces/: IAssignment.cs
CS/TheLearningChannelCS.Handlers/: InputHandler.cs  Program.cs  TheLearningChannelCS.Handlers.csproj  UIHandler.cs
CS/TheLearningChannelCS.Questions/: TheLearningChannelCS.Questions.csproj
CS/TheLearningChannelCS.Questions/EigthAssignment/: FirstQuestion.cs
CS/TheLearningChannelCS.Questions/FifthAssignment/: FirstQuestion.cs  SecondQuestion.cs
CS/TheLearningChannelCS.Questions/NinthAssignment/: FirstQuestion.cs  SecondQuestion.cs
CS/TheLearningChannelCS.Questions/TenthAssignment/: FirstQuestion.cs
CS/TheLearningChannelCS.Questions/ThirtenthAssignment/: FirstQuestion.cs
JAVA/JSF/nbproject/: genfiles.properties  project.properties  project.xml
JAVA/JSF/web/: index.xhtml  response.xhtml
JAVA/JSF/web/WEB-INF/: web.xml
JAVA/JSF/web/resources/styles/: index.css
apps/: CMakeLists.txt
include/exercises/: exercise.h  exercises.h  question.h
include/exercises/interfaces/: exercise.h  exercise_interface.h  question.h  question_interface.h
include/exercises/list/: eighth.h  fifth.h  ninth.h  tenth.h  thirteenth.h
include/menu/: menu.h
include/services/: math_handler.h  prompt_handler.h  random_generator.h  try_again_handler.h  ui_handler.h  vector_handler.h
lib/: CMakeLists.txt
lib/exercises/: exercises.cpp
lib/exercises/list/: fifth.cpp  tenth.cpp
lib/services/: ui_handler.cpp
resources/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/exercises/: exercise.cpp  exercises.cpp  question.cpp
src/exercises/list/: eighth.cpp  fifth.cpp  ninth.cpp  tenth.cpp  thirteenth.cpp
src/menu/: menu.cpp
src/services/: prompt_handler.cpp  try_again_handler.cpp  ui_handler.cpp
tools/: CMakeLists.txt
(+18 files in other folders)
